[package]
name = "couscous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
bincode = { version = "2.0.0-alpha.2", features = ["derive", "std"] }

quinn = { version = "0.8.0", features = ["native-certs", "tls-rustls"], git = "https://github.com/quinn-rs/quinn", rev = "28129109cfd819af23fc56daf94e7b7b76765a25" }
rustls = { version = "0.20", features = ["quic"] }
rustls-pemfile = "0.2.1"
rcgen = "0.8.14"

log = { version = "0.4", features = ["serde"] }
fern = "0.6.0"
futures-util = "0.3"
once_cell = "1.8.0"
anyhow = "1.0"
argh = "0.1.7"
chrono = "0.4.19"
compact_str = { version = "0.4", features = ["serde"] }
fnv = "1.0.7"
smallvec = { version = "1.7.0", features = ["const_new", "union", "write", "may_dangle"] }
integer-encoding = { version = "3.0.2", features = ["tokio_async"] }
parking_lot = "0.11"
bytes = "1.1.0"
async-trait = "0.1"
tokio-graceful-shutdown = "0.4.3"
parse_duration = "2.1.1"

tokio = { version = "1", features = ["full", "parking_lot"] }
snmalloc-rs = "0.2.28"

[target.'cfg(target_feature = "sse2")'.dependencies]
varint-simd = "0.3.0"

[dev-dependencies]
axum = "0.4.2"

[features]
native = ["varint-simd/native-optimizations", "snmalloc-rs/native-cpu"]
